--- a/index.html
+++ b/index.html
@@ -19,22 +19,36 @@
                 <img src="image/logo.png">
             </div>
 
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#menu">Menu</a></li>
-                <li><a href="#gallary">Gallery</a></li>
-                <li><a href="#review">Review</a></li>
-                <li><a href="#order">Order</a></li>
-            </ul>
+            <div class="menu-container">
+                <ul class="desktop-menu">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#menu">Menu</a></li>
+                    <li><a href="#gallery">Gallery</a></li>
+                    <li><a href="#review">Review</a></li>
+                    <li><a href="#order">Order</a></li>
+                </ul>
+
+                <div class="dropdown">
+                    <button class="dropbtn">Dropdown</button>
+                    <div class="dropdown-content">
+                        <a href="#home">Home</a>
+                        <a href="#about">About</a>
+                        <a href="#menu">Menu</a>
+                        <a href="#gallery">Gallery</a>
+                        <a href="#review">Review</a>
+                        <a href="#order">Order</a>
+                    </div>
+                </div>
+            </div>
 
             <div class="icon">
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <i class="fa-solid fa-heart"></i>
                 <i class="fa-solid fa-cart-shopping"></i>
             </div>
-
         </nav>
+
 
         <div class="main">
 
@@ -683,7 +697,7 @@
         <div class="order_main">
 
             <div class="order_image">
-                <img src="C:\All\HTML CODE\Food Website\image\order_image1.png">
+                <img src="\image\order_image1.png">
             </div>
 
             <form action="#">
@@ -874,7 +888,7 @@
         </div>
 
         <p class="end">Design by<span><i class="fa-solid fa-user-graduate"></i>
-            Aamir Khan </span> &nbsp; 2024 All Rights.
+                Aamir Khan </span> &nbsp; 2024 All Rights.
         </p>
 
     </footer>
@@ -894,6 +908,15 @@
             }
             $("#autodate").text(newDate());
         });
+
+        const dropbtn = document.querySelector('.dropbtn');
+        const dropdownContent = document.querySelector('.dropdown-content');
+
+        dropbtn.addEventListener('click', () => {
+            dropdownContent.style.display = dropdownContent.style.display === 'block' ? 'none' : 'block';
+        });
+
+
     </script>
 
 
