--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
         <div class="order_main">
 
             <div class="order_image">
-                <img src="/image/order_image.png">
+                <img src="image/chef1.png">
             </div>
 
             <form action="#">
