--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </ul>
 
                 <div class="dropdown">
-                    <button class="dropbtn">Dropdown</button>
+                    <button class="dropbtn">Click on me</button>
                     <div class="dropdown-content">
                         <a href="#home">Home</a>
                         <a href="#about">About</a>
